styles.css
:root {
    --dark-grey: #434343;
    --med-grey: #505050;
    --light-grey: #5d5d5d;
    --white: #ffffff;
    --yellow: #fef303;
}

body {
    /*font-family: "Inria Sans", sans-serif;*/
    font-family: sans-serif;
    margin: 0;
    background-color: var(--med-grey);
    color: var(--white);
}

h1 {
    margin: 16px 16px 0px 16px;
    font-size: 36px;
    font-weight: bold;
    color: var(--yellow);
}

h2 {
    margin: 8px 16px 0px 16px;
    font-size: 24px;
    font-weight: bold;
    color: var(--yellow);
}

p {
    margin: 0px 16px 0px 16px;
}

/* 
/////////////////////////////
///// NAVIGATION BANNER /////
/////////////////////////////
 */

#banner {
    height: 100px;
    width: 100%;
    position: fixed;
    top: 0;
    background-color: var(--dark-grey);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
    z-index: 100;
}

#logo {
    height: inherit;
}

#nav-bar {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 24px;
    margin: 0 20px;
}

.nav-bar-item {
    height: 100%;
    width: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 16px;
    color: var(--white);
    text-decoration: none;
}

.selected-item, .nav-bar-item:hover {
    color: var(--yellow);
    background-color: var(--med-grey);
    transition: all 0.6s ease;
}

#content-body {
    margin-top: 132px;
    padding: 0 240px;
    min-width: 1200px;
}

/* 
/////////////////////////////
/////// SLOGAN BANNER ///////
/////////////////////////////
 */

#slogan-banner {
    height: 500px;
    width: 100%;
    background-image: url(images/lightbulb.jpg);
    background-position: center;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: -32px;
}

#slogan {
    font-size: 24px;
    font-weight: bold;
    background-color: var(--med-grey);
    width: fit-content;
    height: fit-content;
    padding: 16px 48px;
    border-radius: 32px;
}

/* 
/////////////////////////////
/////// SERVICE CARDS ///////
/////////////////////////////
 */

.services-row {
    display: flex;
    justify-content: center;
    padding: 32px 0;
}
.service-card {
    width: 240px;
    background-color: var(--light-grey);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 32px;
    border-radius: 16px;
}

.service-card-detailed {
    width: 484px;
    background-color: var(--light-grey);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 32px;
    border-radius: 16px;
}

.service-img {
    margin: 32px 0 32px 0;
    width: 100px;
}

.service-name {
    margin: 0 0 16px 0;
    color: var(--yellow);
}

.service-text {
    font-size: 16px;
    margin: 0 24px 32px 28px;
    text-align: center;
}

/* 
///////////////////////////////////
/////// ACCREDITATION LOGOS ///////
///////////////////////////////////
 */

.accreditation-container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 8px 16px;
}

.accreditation-img {
    margin: 0 64px;
}

/* 
/////////////////////////////
/////// MEMBER CARDS ////////
/////////////////////////////
 */

 .members-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
 }

 .member-card {
    background-color: var(--light-grey);
    border-radius: 32px;
    padding: 16px;
    height: fit-content;
    width: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 0 20px 0;
 }

 .member-img {
    height: 352px;
    border-radius: 16px;
 }

 .member-info {
    width: 512px;
    margin: 0 0 0 8px;
    display: flex;
    flex-direction: column;
 }

 .member-name {
    margin: 0;
    font-size: 24px;
    font-weight: bold;
    text-align: center;
    color: var(--yellow);
 }

 .member-job-title {
    margin: 0;
    font-size: 20px;
    font-weight: normal;
    font-style: italic;
    text-align: center;
 }

 .member-description {
    margin: 0;
    font-size: 16px;
    text-align: center;
 }

 /* 
/////////////////////////////
/////// PROJECT CARDS ///////
/////////////////////////////
 */

.projects-row {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 32px;
}
 
.project-card {
    background-color: var(--light-grey);
    padding: 16px;
    display: flex;
    flex-direction: column;
    width: fit-content;
    border-radius: 32px;
    margin: 0 16px;
}

.project-name {
    text-align: center;
    margin: 0;
    color: var(--yellow);
}

.project-description {
    width: 640px;
    margin: 0;
    text-align: center;
}

/* PROJECT SLIDESHOW */

/*
* {
    box-sizing: border-box;
}
*/

.project-slideshow-container {
    width: 640px;
    position: relative;
    margin: 16px 0;
}

/* Hide images by default */
.project-slides-1, .project-slides-2, .project-slides-3, .project-slides-4 {
    display: none;
}

.project-img {
    width: 640px;
    height: 460px;
    object-fit: cover;
    border-radius: 16px;
}

/* Next & Previous buttons */
.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 16px;
    color: #ffffff;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

/* Position Next button to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

/* On hover, add black background */
.prev:hover, .next:hover {
    background-color: rgba(0,0,0,0.8);
}

/* Dots */

.dot-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 0 8px 0;
}

.dot-1, .dot-2, .dot-3, .dot-4 {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .dot:hover {
    background-color: var(--yellow);
}

/* Fading animation */
.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

 /* 
/////////////////////////////
/////// CONTACT CARDS ///////
/////////////////////////////
 */

.contact-container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px;
    margin: 64px;
}

 .contact-card {
    background-color: var(--light-grey);
    width: fit-content;
    padding: 32px;
    border-radius: 16px;
 }

 .contact-entry {
    display: flex;
    align-items: center;
    margin: 0 0 8px 0;
    color: var(--white);
    text-decoration: none;
 }

 .contact-img {
    width: 32px;
    height: 32px;
 }

 .contact-text {
    font-size: 20px;
    margin: 0 0 0 8px;
    height: fit-content;
 }

 .contact-buttons {
    display: flex;
    justify-content: center;
    align-items: center;
 }

 .contact-btn-img {
    margin: 0 16px;
    width: 40px;
    height: 40px;
    background-size: contain;
 }

 .img-whatsapp {
    background-image: url(images/icons/whatsapp-outlined.png);
 }
 .img-whatsapp:hover {
    background-image: url(images/icons/whatsapp-filled.png);
    transition: all 0.6s ease;
 }

 .img-facebook {
    background-image: url(images/icons/facebook-outlined.png);
 }
 .img-facebook:hover {
    background-image: url(images/icons/facebook-filled.png);
    transition: all 0.6s ease;
 }

 .img-instagram {
    background-image: url(images/icons/instagram-outlined.png);
 }
 .img-instagram:hover {
    background-image: url(images/icons/instagram-filled.png);
    transition: all 0.6s ease;
 }

